# project_final_cs50

./: initiation.py
health_tracker_project/: README.md  code_bundle_20250211_002612.txt  db.sqlite3  generate_coding_structure.py  generate_hierarchy.py  manage.py  pyproject.toml
health_tracker_project/apps/core/: urls.py  views.py
health_tracker_project/apps/core/templates/core/: dashboard.html
health_tracker_project/apps/users/: models.py  urls.py  views.py
health_tracker_project/apps/users/migrations/: 0001_initial.py
health_tracker_project/apps/users/templates/users/: profile.html
health_tracker_project/health_tracker/: asgi.py  settings.py  urls.py  wsgi.py
health_tracker_project/static/css/: styles.css
health_tracker_project/templates/: base.html  components.html
