[tool.poetry]
name = "health-tracker-yolo"
version = "0.1.0"
description = ""
authors = ["Strix <miguelglopes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.6"
psycopg2-binary = "^2.9.10"
gunicorn = "^23.0.0"
openai = "^1.61.1"
django-environ = "^0.12.0"
django-tailwind = "^3.8.0"
htmx-django = "^0.1.1"
django-compressor = "^4.5.1"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
flake8 = "^7.1.1"
pytest = "^8.3.4"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
